--- a/app/assets/stylesheets/custorm.scss
+++ b/app/assets/stylesheets/custorm.scss
@@ -492,6 +492,12 @@ td.smaller-image img {
         padding:15px;
         background: #fff;
         text-align: center;
+        border-radius: 5px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        img{
+          max-height: 345px;
+          margin:auto;
+        }
         .name_book{
           padding: 10px 5px;
           a{
@@ -694,6 +700,10 @@ td.smaller-image img {
     p{
       margin:10px 0;
     }
+    span{
+      font-size: 12px;
+      font-style:italic;
+    }
   }
 }
 .comment{
@@ -720,6 +730,7 @@ td.smaller-image img {
     padding: 30px;
     border-radius: 10px;
     text-align: center;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     input[type="submit"]{
       background-color: #ee4b28;
       border-color: #ed431f;
@@ -757,8 +768,7 @@ td.smaller-image img {
 a.add{
   display: inline-block;
   color: #fff;
-  padding: red;
-  background: red;
+  background: #eb3812;
   padding: 5px 10px;
   border-radius: 5px;
   font-style: italic;
@@ -885,3 +895,95 @@ form.edit_borrow_book select {
 .average-review-rating{
   margin-top: 20px;
 }
+.smaller-image-thum{
+  img{
+    max-width: 30px !important;
+  }
+}
+.password_reset{
+  .content-login{
+    padding:60px;
+    input[type="submit"]{
+      margin-top: 10px;
+    }
+  }
+}
+
+.new-form{
+  .new_user{
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin-bottom: 30px;
+  }
+}
+.borrowing_book{
+  table{
+    border: solid 1px #ddd;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin-bottom: 30px;
+  }
+}
+.list-title{
+  text-align: center;
+  margin-bottom: 16px;
+}
+.dropdown.open{
+  .dropdown-menu{
+    background: rgba(0,0,0,0.6);
+    color: #fff;
+    li{
+      a{
+        display: block;
+        padding:10px;
+        color:#fff;
+      }
+      &:hover{
+        a{
+          background:#ee4b28;
+        }
+      }
+    }
+  }
+}
+.admin-page{
+margin-top: 55px;
+border-radius: 5px;
+box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+margin-bottom: 50px;
+table{
+    thead{
+      tr{
+        font-size: 11px;
+      }
+    }
+  }
+}
+.pagination a{
+  padding: 5px 10px;
+  border: solid 1px #ddd;
+  &:hover{
+    background: #eb3812;
+    color: #fff;
+  }
+}
+
+.title-login{
+  margin: 10px 0 20px 0;
+  color: red;
+  font-style: italic;
+}
+.title_page{
+  margin: 10px 0;
+  text-align: center;
+  color: red;
+  font-style: italic;
+  border-bottom: solid 1px #ddd;
+}
+.list_admin{
+  li.active{
+    background: #C52F24;
+  }
+}
+
