--- a/app/views/admin/authors/_form.html.erb
+++ b/app/views/admin/authors/_form.html.erb
@@ -7,5 +7,9 @@
   <%= f.label :description %>
   <%= f.text_area :description, class: "form-control" %>
 
+  <p class="picture">
+    <%= f.file_field :authorimage %>
+  </p>
+
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
