--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,22 +1,24 @@
 <% provide(:title, @author.name) %>
-<div class="row">
-  <div class="col-md-4">
-    <section>
+<div class="row main">
+  <div class="col-md-3">
+    <div class="profile">
       <h4><%= @author.name %></h4>
-        <div id="follow_form_author_<%= @author.id %>">
-          <% if current_user.following_author?(@author) %>
-            <%= render "unfollow" %>
-          <% else %>
-            <%= render "follow" %>
-          <% end %>
-        </div>
-    </section>
-    <section class="stats">
-      <%= render 'shared/stats_author' %>
-    </section>
+      <div id="follow_form_author_<%= @author.id %>">
+        <% if current_user.following_author?(@author) %>
+          <%= render "unfollow" %>
+        <% else %>
+          <%= render "follow" %>
+        <% end %>
+      </div>
+      <p><%= @author.description %></p>
+    </div>
   </div>
-  <div class="col-md-8">
-
+  <div class="col-md-9">
+    <div class="col-md-12 list_users list_folowing">
+      <h3 class="title">List book borrowing</h3>
+    </div>
   </div>
 </div>
+
+
 
