--- a/app/views/commments/_commment.html.erb
+++ b/app/views/commments/_commment.html.erb
@@ -1,7 +1,8 @@
 <li>
   <span class="review-rating" data-score="<%= commment.rate %>"></span>
   <p><%= commment.description %></p>
-  <p><%= time_ago_in_words(commment.created_at) %></p>
+  <p><%= time_ago_in_words(commment.created_at) %> <span>by: <%= commment.user.fullname %></span></p>
+
   <% if current_user.present? %>
     <% if commment.user_id == current_user.id %>
       <span><%= link_to "delete", book_commment_path(commment.book, commment), method: :delete %></span>
