--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,13 +19,16 @@
         </li>
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
+          <% if current_user.is_admin == true %>
+          <li><%= link_to "Dashboard", admin_users_path %></li>
+          <% end %>
           <li class="dropdown">
             <%= link_to t("sessions.account"), Settings.link_setting,
               "data-toggle": "dropdown", class: "dropdown-toggle" %>
             <ul class="dropdown-menu">
-              <li class="divider"></li>
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "List borrowing books", borrowing_book_user_path(current_user) %></li>
               <li>
                 <%= link_to t("sessions.logout"), logout_path,
                   method: "delete" %>
