--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t("sessions.forgot_password") %>
-<div class="container">
+<div class="container main password_reset">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
       <div class="content-login">
@@ -10,7 +10,7 @@
           <% end %>
           <%= f.label :email %>
           <%= f.email_field :email, class: "form-control" %>
-          <%= f.submit t("password_resets.submit"), class: "btn btn-primary" %>
+          <%= f.submit "Submit", class: "btn btn-primary" %>
         <% end %>
       </div>
     </div>
