--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide :button_text, t("sessions.signup") %>
 
 <h3 class="title_page"><%= t("sessions.signup") %></h3>
-<div class="edit-form">
+<div class="new-form">
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
