--- a/app/views/authors/_follow.html.erb
+++ b/app/views/authors/_follow.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(current_user.follow_authors.new, remote: true) do |f| %>
+<%= form_for(current_user.follow_authors.build, remote: true) do |f| %>
   <div><%= hidden_field_tag :author_id, @author.id %></div>
   <%= f.submit "Follow", class: "btn btn-primary" %>
 <% end %>
