--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,32 +1,38 @@
 <% provide :title, t("users.list_users") %>
-<h3 class="title_page"><%= t "users.list_users" %></h3>
-<div class="bootstrap snippet">
-  <div class="main-box no-header clearfix">
-    <div class="main-box-body clearfix">
-      <%= link_to t("users.add_user"), new_admin_user_path, class: "add" %>
-      <%= form_tag admin_users_path, method: :get,
-        id: "users_search" do %>
+
+<div class="panel-heading"><%= t "users.list_users" %></div>
+<div class="panel-body">
+  <div class="main-box-body clearfix">
+    <%= form_tag admin_users_path, method: :get,
+      id: "users_search" do %>
+      <div class="tab_search clearfix">
+        <%= link_to t("users.add_user"), new_admin_user_path, class: "add" %>
         <p class="admin-search">
-          <%= text_field_tag :search, params[:search] %>
+          <%= text_field_tag :search, params[:search], placeholder:"Search name..." %>
           <%= submit_tag t "users.search", fullname: nil %>
         </p>
-        <div class="table-responsive" id="users_id">
-          <table class="table user-list">
-            <thead>
-              <tr>
-                <th><span><%= t "users.user" %></span></th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= render @users %>
-              <%= will_paginate @users %>
-            </tbody>
-          </table>
-        </div>
-      <% end %>
-      <p>
-        <%= link_to t("user.export_excel"), admin_users_path(format: Settings.xls) %>
-      </p>
-    </div>
+      </div>
+      <div class="table-responsive" id="users_id">
+        <table class="table user-list">
+          <thead>
+            <tr>
+              <th><span></span></th>
+              <th><span><%= t "users.user" %></span></th>
+              <th><span><%= t "users.email" %></span></th>
+              <th><span><%= t "users.created" %></span></th>
+              <th>&nbsp;</th>
+              <th>&nbsp;</th>
+            </tr>
+          </thead>
+          <tbody>
+            <%= render @users %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+    <%= will_paginate @users %>
+    <p>
+      <%= link_to t("user.export_excel"), admin_users_path(format: Settings.xls) %>
+    </p>
   </div>
 </div>
