--- a/app/views/authors/_unfollow.html.erb
+++ b/app/views/authors/_unfollow.html.erb
@@ -1,3 +1,2 @@
-<%= form_for(current_user.follow_authors.find_by(author_id: @author.id), html: { method: :delete }, remote: true) do |f| %>
-  <%= f.submit "Unfollow", class: "btn" %>
-<% end %>
+<%= link_to t("users.unfollow"), "#", class: "followauthor destroy",
+  "data-id": @author.id, remote: true %>
