--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,5 @@
-<%= t "sessions.hi" @user.fullname %>,
+<%=  @user.fullname %>,
 
-<%= t "sessions.content_mail" %>
+<%= t("sessions.content_mail") %>
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
