--- a/app/views/admin/borrow_books/_borrow_book.html.erb
+++ b/app/views/admin/borrow_books/_borrow_book.html.erb
@@ -5,15 +5,11 @@
   <td><%= borrow_book.user.fullname %></td>
   <td><%= borrow_book.date_from.to_date %></td>
   <td><%= borrow_book.date_to.to_date %></td>
-  <td>
-    <% if borrow_book.status == nil %>
-      <span class="status_waiting">waiting</span>
-      <% elsif borrow_book.status == true %>
-        <span class="status_true">success</span>
-      <% else %>
-        <span class="status_false">reject</span>
-    <% end %>
-   </td>
+  <% if borrow_book.status.present?  %>
+    <td class="<%= borrow_book.status %>"><%= borrow_book.status %></td>
+  <% else %>
+    <td class="waiting">Waiting</td>
+  <% end %>
   <td>
     <%= link_to edit_admin_borrow_book_path(borrow_book), class: "btn_edit" do %>
       <i class="fa fa-pencil-square-o"></i>
