--- a/app/views/admin/borrow_books/_form.html.erb
+++ b/app/views/admin/borrow_books/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for [:admin, @borrow_book] do |f| %>
-  <%= f.select :status, [["success", true], ["waiting", false]] %>
+  <%= f.select :status, [["Accepted", "accepted"], ["Rejected", "rejected"], ["Borrowed", "borrowed"], ["Checked", "checked"]] %>
   <%= f.submit yield(:button_text), classs: "btn btn-primary" %>
 <% end %>
