--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <td class="thumnail_image"><%= image_tag user.avatar.url if user.avatar? %></td>
   <td><%= user.fullname %></td>
+  <td><%= user.email %></td>
   <td><%= user.created_at %></td>
   <td>
     <%= link_to edit_admin_user_path(user), class: "btn-edit" do %>
