--- a/app/views/books/_borrow.html.erb
+++ b/app/views/books/_borrow.html.erb
@@ -3,6 +3,7 @@
     <%= hidden_field_tag :book_id, @book.id %>
     <%= datetime_field :date_from %>
     <%= datetime_field :date_to %>
+    <%= hidden_field_tag :status, "waiting" %>
     <%= f.submit "Borrow", class: "btn btn-primary" %>
   <% end %>
 </div>
