--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,3 @@
-
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -23,57 +22,44 @@
           <% if current_user.is_admin == true %>
           <li><%= link_to "Dashboard", admin_users_path %></li>
           <% end %>
+          <li class="dropdown notification">
+            <%= link_to "", class: "dropdown-toggle", id: "noti-count",
+              data: {toggle: "dropdown"},
+              aria: {haspopup: "true", "data-id": current_user.id, expanded: "false"} do %>
+              <span class="fa fa-globe"></span>
+              <span class="badge badge-danger" id="badge-dange_<%= current_user.id %>" data-noti-count="<%= current_user.notifications.num_not_check %>">
+                <%= current_user.notifications.num_not_check %>
+              </span>
+              <span class="caret"></span>
+            <% end %>
+            <ul class="dropdown-menu dropdown-notification scrollable-menu" id="show_notifition_<%= current_user.id %>" >
+              <% if current_user.notifications.any?  %>
+                <% current_user.notifications.each do |notification| %>
+                  <li class="read_<%= "#{notification.read}" %>"><%= link_to "#{notification.notification}",
+                    notification.notification_link, "data-id": notification.id %>
+                    <span><%= time_ago_in_words(notification.created_at) + " ago" %></span>
+                  </li>
+                <% end %>
+              <% end %>
+            </ul>
+          </li>
           <li class="dropdown">
-            <%= link_to t("sessions.account"), Settings.link_setting,
-              "data-toggle": "dropdown", class: "dropdown-toggle" %>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+              <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+            </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-              <li><%= link_to "List borrowing books", borrowing_book_user_path(current_user) %></li>
+              <li><%= link_to "List borrowing books",
+                borrowing_book_user_path(current_user) %></li>
               <li>
                 <%= link_to t("sessions.logout"), logout_path,
                   method: "delete" %>
               </li>
             </ul>
           </li>
-          <li class="nitifitions">
-            <%= image_tag("icon.png") %>
-            <span  id="notification-number">3</span>
-        </li>
-
-
-            <li class="dropdown">
-  <%= link_to "#!", class: "dropdown-toggle", id: "noti-count", data: {toggle: "dropdown"},
-    aria: {haspopup: "true", expanded: "false"} do %>
-    <span class="fa fa-globe"></span>
-    <span class="badge badge-danger" id="badge-dange_<%= current_user.id %>" data-noti-count="<%= current_user.notifications.num_not_check %>">
-      <%= current_user.notifications.num_not_check %>
-    </span>
-    <span class="caret"></span>
-  <% end %>
-
-    <ul class="dropdown-menu dropdown-notification scrollable-menu" id="show_notifition_<%= current_user.id %>" >
-      <% if current_user.notifications.any?  %>
-        <% current_user.notifications.each do |notification| %>
-          <li><%= link_to "#{notification.notification}", notification.notification_link %></li>
-        <% end %>
-      <% end %>
-    </ul>
-</li>
-
-
-
-
-
-
-
-
-
-
         <% else %>
-          <li><%= link_to t("sessions.login"), login_path,
-            class: "" %>
-          </li>
+          <li><%= link_to t("sessions.login"), login_path %></li>
         <% end %>
       </ul>
     </div>
