--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,62 +10,97 @@
       "data-turbolinks-track": "reload" %>
   </head>
   <body>
-      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed">
-              <span class="sr-only"></span><i class="fa fa-bars"></i>
-            </button>
-            <%= link_to image_tag("logo.png"), root_path, class: "logo_f" %>
-          </div>
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                  <%= link_to t("sessions.account"), Settings.link_setting,
-                    "data-toggle": "dropdown", class: "dropdown-toggle" %>
-                  <ul class="dropdown-menu">
-                    <li><%= link_to "Profile", current_user %></li>
-                    <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                    <li><%= link_to "List borrowing books", borrowing_book_user_path(current_user) %></li>
-                    <li>
-                      <%= link_to t("sessions.logout"), logout_path,
-                        method: "delete" %>
-                    </li>
-                  </ul>
-                </li>
-            </ul>
-          </div>
+    <div id="wrapper">
+      <!-- Navigation -->
+      <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+          <%= link_to image_tag("logo.png"), root_path, class: "logo_f" %>
         </div>
-      </nav>
-    <main>
-      <div class="container admin-page">
-        <div class="row">
-          <div class="col-md-3 left-sidebar">
-            <h3 class="title_page"><%= Settings.text_user_sidebar %></h3>
-            <ul class="list_admin">
-              <li><%= link_to "Manager users", admin_users_path %></li>
+        <!-- /.navbar-header -->
+        <ul class="nav navbar-top-links navbar-right">
+          <li class="dropdown notification">
+            <%= link_to "", class: "dropdown-toggle", id: "noti-count",
+              data: {toggle: "dropdown"},
+              aria: {haspopup: "true", "data-id": current_user.id, expanded: "false"} do %>
+              <span class="fa fa-globe"></span>
+              <span class="badge badge-danger" id="badge-dange_<%= current_user.id %>" data-noti-count="<%= current_user.notifications.num_not_check %>">
+                <%= current_user.notifications.num_not_check %>
+              </span>
+              <span class="caret"></span>
+            <% end %>
+            <ul class="dropdown-menu dropdown-notification scrollable-menu" id="show_notifition_<%= current_user.id %>" >
+              <% if current_user.notifications.any?  %>
+                <% current_user.notifications.each do |notification| %>
+                  <li class="read_<%= "#{notification.read}" %>"><%= link_to "#{notification.notification}",
+                    notification.notification_link, "data-id": notification.id %>
+                    <span><%= time_ago_in_words(notification.created_at) + " ago" %></span>
+                  </li>
+                <% end %>
+              <% end %>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+              <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "List borrowing books",
+                borrowing_book_user_path(current_user) %></li>
+              <li>
+                <%= link_to t("sessions.logout"), logout_path,
+                  method: "delete" %>
+              </li>
+            </ul>
+          </li>
+          <!-- /.dropdown -->
+        </ul>
+        <!-- /.navbar-top-links -->
+        <div class="navbar-default sidebar" role="navigation">
+          <div class="sidebar-nav navbar-collapse">
+            <ul class="nav" id="side-menu">
+              <li><i class="fa fa-dashboard fa-fw"></i><%= link_to "Manager users", admin_users_path %></li>
               <li><%= link_to "Manager books", admin_books_path %></li>
               <li><%= link_to "Manager authors", admin_authors_path %></li>
               <li><%= link_to "Manager publishers", admin_publishers_path %></li>
               <li><%= link_to "Manager categories", admin_categories_path %></li>
               <li><%= link_to "Manager Borrow books", admin_borrow_books_path %></li>
             </ul>
-          </div><!-- /.col-md-3 -->
-          <div class="col-md-9 content-admin">
+          </div>
+          <!-- /.sidebar-collapse -->
+        </div>
+        <!-- /.navbar-static-side -->
+      </nav>
+      <div id="page-wrapper">
+        <div class="row admin-page">
+          <div class="col-lg-12">
             <% flash.each do |type, message| %>
               <%= content_tag :div, class: "alert alert-#{type}
                 alert-dismissible", role: "alert" do %>
-              <button type="button" class="close"
+                <button type="button" class="close"
                 data-dismiss="alert" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-              </button>
-              <%= message %>
+                <span aria-hidden="true">&times;</span>
+                </button>
+                <%= message %>
               <% end %>
             <% end %>
-            <%= yield %>
+            <div class="panel panel-default">
+              <%= yield %>
+            </div>
+            <!-- /.panel -->
           </div>
+          <!-- /.col-lg-12 -->
         </div>
+        <!-- /.row -->
       </div>
-    </main>
+      <!-- /#page-wrapper -->
+    </div>
   </body>
 </html>
